<?xml version="1.0"?>
<package>
  <name>ros_viconstream</name>
  <version>1.1.1</version>
  <description>
      A simple package for reading Vicon Motion Capture data in ROS.
  </description>

  <maintainer email="emil.fresk@gmail.com">Emil Fresk</maintainer>
  <license>BSL-1.0</license>

  <!-- <url type="website">http://wiki.ros.org/ros_viconstream</url> -->

  <author email="emil.fresk@gmail.com">Emil Fresk</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libviconstream</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libviconstream</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
